--- a/app/src/main/res/layout/activity_cheat.xml
+++ b/app/src/main/res/layout/activity_cheat.xml
@@ -28,10 +28,10 @@
         android:text="@string/show_answer_button" />
 
     <Button
-        android:id="@+id/hide_answer_button"
+        android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hide_answer_button" />
+        android:text="@string/back_button" />
 
 
 </LinearLayout>
